# message-scheduler

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  OPENAI_SETUP.md  PROGRESS.md  README.md  TELEGRAM_SETUP.md  docker-compose.yml  pyproject.toml  setup_session.py
.claude/: settings.local.json
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 20260507_001_baseline.py  20260507_002_sent_messages.py  20260507_003_exact_messages_and_admin.py  20260507_004_index_user_telegram_id.py  20260508_005_sent_messages_fk.py  20260509_006_timezone.py  20260515_007_repeat_count.py  20260517_008_media_support.py  20260517_009_extra_targets.py  20260517_010_blackout_hours.py
deploy/: .env.example  backup.sh  infra-compose.yml  server-setup.sh
src/message_scheduler/: admin.py  ai_generator.py  config.py  database.py  main.py  models.py  scheduler.py  telegram_client.py  users.py
src/message_scheduler/api/: __init__.py  deps.py  schedules.py  schemas.py  users.py
src/message_scheduler/bot/: handlers.py  keyboards.py  states.py
tests/: conftest.py  test_api.py  test_parse_interval.py  test_users.py
