[project]
name = "message-scheduler"
version = "0.1.0"
description = "AI-powered Telegram message scheduler — sends messages from your user account"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.16",
    "telethon>=1.39",
    "openai>=1.77",
    "apscheduler>=3.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.9",
    "python-dotenv>=1.1",
    "redis[asyncio]>=7.4.0",
    "alembic>=1.18.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/message_scheduler"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
