[project]
name = "message-scheduler"
version = "0.1.0"
description = "AI-powered Telegram message scheduler — sends messages from your user account"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.16",
    "openai>=1.77",
    "apscheduler>=3.11",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.9",
    "redis[asyncio]>=7.4.0",
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/message_scheduler"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
